# sparql-endpoint-tool

./: .gitignore  README.md  main.py  pyproject.toml  sparql-config.toml
src/sparql_endpoint_tool/: __init__.py  ai_services.py  chat_endpoints.py  cli.py  config.py  server.py
src/sparql_endpoint_tool/templates/: help.html  index.html
tests/: __init__.py  test_cli.py
