[project]
name = "sparql-endpoint-tool"
version = "0.1.0"
description = "Ad-hoc SPARQL endpoint with YASGUI web interface for RDF files"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "SPARQL Endpoint Tool", email = "sparql@example.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "rdflib>=7.0.0",
    "click>=8.1.7",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "toml>=0.10.2",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
sparql-endpoint = "sparql_endpoint_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "httpx>=0.25.2",
]
